syntax = "proto3";
package Jubo.JuLiao.IM.Wx.Proto; //命名空间约定
import "ChatRoomPushNotice.proto";

message ChatRoomAddNoticeMessage {
    string WeChatId = 1; // 商家个人微信内部全局唯一识别码
    ChatRoomMessage ChatRoom = 2;
}