    syntax = "proto3";
package Jubo.JuLiao.IM.Wx.Proto; //命名空间约定

message ChatRoomMessage {
    string UserName = 1;
    string NickName = 2;
    repeated string MemberList = 3;
    string Owner = 4;
    string Notice = 5;
    repeated DisplayNameMessage ShowNameList = 6;
    string SelfDisplayName = 7;
    string Avatar = 8; //微信头像 
    int32 Verify = 9; // 群聊邀请确认
    bool MsgSilent = 10; // 消息免打扰
    string Remark = 11; // 群聊备注，7.0.14版本才有
    int32 Type = 12; // type字段，供参考 (4.6.16版本开始：&2048 置顶）
    bool IsUnusual = 30; // 是否异常

    message DisplayNameMessage{
        string UserName = 1; // 群成员
        string ShowName = 2; // 群显示名
        string Inviter = 3; // 邀请者
        int32 Flag = 4; // &2048 群管理员，其他未知
    }
}

// 注意MessageType大小写： ChatroomPushNotice = 2031; // 手机端推送群聊列表
message ChatRoomPushNoticeMessage {
    string WeChatId = 1; // 商家所属微信号
    repeated ChatRoomMessage ChatRooms = 2; // 好友信息模型 多个
    int32 Size = 3;
    int32 Count = 4;
    int32 Page = 5;
    int64 TaskId = 6;
}

