syntax = "proto3";
package Jubo.JuLiao.IM.Wx.Proto; //命名空间约定
import "TransportMessage.proto";
message WeChatOnlineNoticeMessage {
    string WeChatId = 1; //微信内部全局唯一识别码
    string WeChatNo = 2; //微信号（如果用户设置了微信号）
    string WeChatNick = 3; //微信昵称
    EnumGender Gender = 4; //性别
    string Country = 5; //国家
    string Province = 6; //省份
    string City = 7; //城市
    string Avatar = 8; //微信头像
    string IMEI = 9; // imei号
    string Phone = 10; //
}